--- a/res/layout/fragment_bus_location.xml
+++ b/res/layout/fragment_bus_location.xml
@@ -8,6 +8,15 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <Button
+        android:id="@+id/bt_userloc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="我的位置"
+        android:layout_alignParentRight="true"
+        android:paddingTop="10dp">
+        
+    </Button>
 
 
 </RelativeLayout>
