--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+      <!-- 定义一个普通菜单项 -->
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/menu_bus_search"
+        android:title="查公交"/>
+    <item
+        android:id="@+id/menu_poi_search"
+        android:title="查周边"/>
+
 
 </menu>
