--- a/res/layout/fragment_set.xml
+++ b/res/layout/fragment_set.xml
@@ -2,16 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   	android:layout_marginLeft="2dp"
-   	android:layout_marginRight="2dp"
     android:divider="@drawable/separator_vertical"
     android:orientation="vertical"
     android:showDividers="middle" >
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="16dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="horizontal" >
 
         <TextView
@@ -19,29 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="手机" />
-
-        <TextView
-            android:id="@+id/tv_phone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="right"
-            android:text="18822221111" >
-        </TextView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:text="昵称" />
+            android:text="姓名" />
 
         <EditText
             android:id="@+id/et_username"
@@ -62,20 +43,22 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="密码" />
+            android:text="临近提醒" />
 
-        <EditText
-            android:id="@+id/et_passwd"
+        <CheckBox
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:id="@+id/cb_remind"
             android:layout_weight="2"
             android:gravity="right"
-            android:hint="helloss" />
+            android:checked="false" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" >
 
         <TextView
             android:layout_width="0dp"
@@ -121,11 +104,14 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp" />
+        android:layout_height="16dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="vertical" >
 
         <TextView
@@ -148,5 +134,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="反馈" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray" />
 
 </LinearLayout>
