--- a/res/layout/fragment_set.xml
+++ b/res/layout/fragment_set.xml
@@ -2,142 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:divider="@drawable/separator_vertical"
-    android:orientation="vertical"
-    android:showDividers="middle" >
+    android:orientation="vertical" >
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="16dp" />
-
-    <LinearLayout
+    <ListView
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:text="姓名" />
-
-        <EditText
-            android:id="@+id/et_username"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="right"
-            android:hint="helloss" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:text="临近提醒" />
-
-        <CheckBox
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/cb_remind"
-            android:layout_weight="2"
-            android:gravity="right"
-            android:checked="false" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:text="路线 ：" />
-
-        <RadioGroup
-            android:id="@+id/rg_route"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:orientation="vertical" >
-
-            <RadioButton
-                android:id="@+id/rb_route1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="route1" />
-
-            <RadioButton
-                android:id="@+id/rb_route2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="route2" />
-
-            <RadioButton
-                android:id="@+id/rb_route3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="route3" />
-        </RadioGroup>
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/bt_save_conf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="保存" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="16dp"
-        android:background="@android:color/darker_gray" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical" >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:text="反馈" />
-
-        <EditText
-            android:id="@+id/et_feedback"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="input what you want to say"
-            android:minLines="3" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/bt_feedback"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="反馈" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/darker_gray" />
+        android:dividerHeight="2dp" >
+    </ListView>
 
 </LinearLayout>
