修复setFragment修改后无法立即更新，

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -16,8 +16,8 @@
         android:id="@+id/tv_weather"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:layout_margin="10sp" />
+        android:layout_margin="10sp"
+        android:gravity="right" />
 
     <EditText
         android:id="@+id/tel"
