--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,6 +11,11 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#F5F5F5" />
+
     <RadioGroup
         android:id="@+id/tab_menu"
         android:layout_width="match_parent"
@@ -28,7 +33,8 @@
             android:drawableTop="@drawable/radio_change"
             android:gravity="center_horizontal"
             android:text="定位"
-            android:textColor="@drawable/color" />
+            android:textColor="@drawable/color"
+            android:textSize="12sp" />
 
         <RadioButton
             android:id="@+id/rg_book"
@@ -40,7 +46,8 @@
             android:drawableTop="@drawable/radio_change1"
             android:gravity="center_horizontal"
             android:text="预订"
-            android:textColor="@drawable/color" />
+            android:textColor="@drawable/color"
+            android:textSize="12sp" />
 
         <RadioButton
             android:id="@+id/rg_me"
@@ -53,7 +60,8 @@
             android:gravity="center_horizontal"
             android:paddingTop="2dp"
             android:text="我"
-            android:textColor="@drawable/color" />
+            android:textColor="@drawable/color"
+            android:textSize="12sp" />
     </RadioGroup>
 
 </LinearLayout>
