--- a/res/layout/fragment_bus.xml
+++ b/res/layout/fragment_bus.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/tv_bus_show"
+    <Button
+        android:id="@+id/bt_get_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:text="公交查询 。。。" />
+        android:text="huoqu" />
 
 </LinearLayout>
