--- a/res/layout/fragment_test2.xml
+++ b/res/layout/fragment_test2.xml
@@ -9,6 +9,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:text="周边查询 。。。" />
+        android:text="test2" />
 
 </LinearLayout>
