--- a/res/layout/activity_name.xml
+++ b/res/layout/activity_name.xml
@@ -2,19 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:layout_margin="7dp"
+    android:orientation="vertical" >
 
-    <EditText 
+    <EditText
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="姓名"
-        android:singleLine="true"/>
-        <Button android:id="@+id/button1"
-            android:layout_gravity="right"
-            android:text="save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        android:singleLine="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="好名字可以让你的朋友更容易记住你。" />
 
 </LinearLayout>
