--- a/res/drawable/shape_userkown.xml
+++ b/res/drawable/shape_userkown.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <size android:height="3dp" />
+    <corners android:radius="8dp" />
+
+    <stroke
+        android:width="3dp"
+        android:color="#A52A2A" />
 
 </shape>
