--- a/res/layout/activity_advice.xml
+++ b/res/layout/activity_advice.xml
@@ -2,31 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_margin="8dp"
+    android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="关于班车系统，您可以随时反馈：" />
-    <View android:layout_width="fill_parent"
-          android:layout_height="1sp"/>
-    <LinearLayout 
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical" >
-        <EditText 
+    <EditText
         android:id="@+id/advice"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/shape_userkown"
         android:hint="请填写您的意见或者建议"
-        android:lines="2"/>
-        <Button android:id="@+id/commit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="提交"/>
-            "
-    </LinearLayout>
-    "
+        android:lines="8" />
 
 </LinearLayout>
