--- a/res/layout/activity_remind.xml
+++ b/res/layout/activity_remind.xml
@@ -2,60 +2,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   
-    android:orientation="vertical"
-     >
+    android:layout_margin="7dp"
+    android:orientation="vertical" >
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="开启提醒"
+            android:textSize="18sp" />
+
+        <Switch
+            android:id="@+id/select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:checked="true"
+            android:textOff="否"
+            android:textOn="是" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="提醒距离"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_reminddistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:textSize="16sp" />
+    </RelativeLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="是否开启距离提醒" 
-        android:textSize="24sp"/>
-    <LinearLayout 
-        android:layout_width="fill_parent"
+        android:hint="在指定距离内收到震动提醒" />
+
+    <RatingBar
+        android:id="@+id/distance"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-        
-        <Button
-            android:id="@+id/yes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="是"
-            android:textSize="18sp"
-            />
-        
-    </LinearLayout>
-     <LinearLayout 
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="80sp"
-        android:layout_marginTop="50sp"
-        >
-        <NumberPicker 
-            android:id="@+id/kilo"
-            android:layout_width="40sp"
-            android:layout_height="wrap_content"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="km"
-            android:layout_gravity="center_vertical"/>
-        <NumberPicker 
-            android:id="@+id/meter"
-            android:layout_width="40sp"
-            android:layout_height="wrap_content"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00m"
-            android:layout_gravity="center_vertical"/>
-        
-    </LinearLayout>
-    
-    
+        android:isIndicator="false"
+        android:numStars="6"
+        android:rating="3"
+        android:stepSize="0.5" />
 
 </LinearLayout>
