--- a/res/layout/fragment_book.xml
+++ b/res/layout/fragment_book.xml
@@ -15,11 +15,32 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:text="路线："
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/tv_route"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
             android:text="位置："
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/tv_busloc"
+            android:id="@+id/tv_location"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
